update sample code. (#21)